sandbox/output
OneHundredDoorsTest.java:59: error: '(' expected
    public void after_the_last_pass_the_door_ids_of_the_opened_doors_should_be_1-4-9-16-25-36-49-64-81-100_if_passing_100_doors() {
                                                                                ^
OneHundredDoorsTest.java:59: error: illegal underscore
    public void after_the_last_pass_the_door_ids_of_the_opened_doors_should_be_1-4-9-16-25-36-49-64-81-100_if_passing_100_doors() {
                                                                                                          ^
OneHundredDoorsTest.java:59: error: invalid method declaration; return type required
    public void after_the_last_pass_the_door_ids_of_the_opened_doors_should_be_1-4-9-16-25-36-49-64-81-100_if_passing_100_doors() {
                                                                                                           ^
3 errors
